[gd_scene load_steps=16 format=2]

[ext_resource path="res://export_combat/Gui/DescWindow.tscn" type="PackedScene" id=3]
[ext_resource path="res://export_combat/Gui/SkillWindow.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFontData" id=12]
font_path = "res://Assets/OldWizard.ttf"

[sub_resource type="DynamicFont" id=13]
size = 60
font_data = SubResource( 12 )

[sub_resource type="DynamicFontData" id=14]
font_path = "res://Assets/BetterPixels.ttf"

[sub_resource type="DynamicFont" id=15]
size = 60
font_data = SubResource( 14 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Assets/Fonts/OldWizard.ttf"

[sub_resource type="DynamicFont" id=5]
size = 60
font_data = SubResource( 4 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://Assets/Fonts/BetterPixels.ttf"

[sub_resource type="DynamicFont" id=7]
size = 60
font_data = SubResource( 6 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://Assets/Fonts/OldWizard.ttf"

[sub_resource type="DynamicFont" id=9]
size = 60
font_data = SubResource( 8 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://Assets/Fonts/BetterPixels.ttf"

[sub_resource type="DynamicFont" id=11]
size = 60
font_data = SubResource( 10 )

[node name="SkillWindow" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 696.0
mouse_filter = 2
custom_constants/separation = 70

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
margin_right = 656.0
margin_bottom = 384.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.55
custom_constants/margin_right = 9
custom_constants/margin_left = 25
custom_constants/margin_bottom = 20

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 726.0
margin_right = 1920.0
margin_bottom = 384.0
size_flags_horizontal = 3
custom_constants/margin_right = 32
custom_constants/margin_left = -9
custom_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="HBoxContainer/MarginContainer"]
modulate = Color( 1, 1, 1, 0.588235 )
margin_left = -9.0
margin_right = 1162.0
margin_bottom = 364.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer"]
margin_left = -9.0
margin_right = 1162.0
margin_bottom = 364.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1151.0
margin_bottom = 344.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer/MarginContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1111.0
margin_bottom = 304.0
size_flags_horizontal = 3

[node name="HBoxContainer1" type="HBoxContainer" parent="HBoxContainer/MarginContainer/MarginContainer/MarginContainer/VBoxContainer"]
margin_right = 1091.0
margin_bottom = 92.0
size_flags_vertical = 3

[node name="Skill1" type="Button" parent="HBoxContainer/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer1"]
margin_right = 543.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( -1264, -445 )
mouse_filter = 1
size_flags_horizontal = 3
custom_colors/font_color_hover = Color( 0.662745, 0.027451, 0.666667, 1 )
custom_fonts/font = SubResource( 13 )
text = "Character Skill 1"
flat = true

[node name="Skill1Des" type="Label" parent="HBoxContainer/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer1"]
margin_left = 547.0
margin_top = 22.0
margin_right = 1091.0
margin_bottom = 70.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 15 )
text = "Skill uses left: 5/5"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/MarginContainer/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 1091.0
margin_bottom = 188.0
size_flags_vertical = 3

[node name="Skill2" type="Button" parent="HBoxContainer/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 543.0
margin_bottom = 92.0
mouse_filter = 1
size_flags_horizontal = 3
custom_colors/font_color_hover = Color( 0.662745, 0.027451, 0.666667, 1 )
custom_fonts/font = SubResource( 5 )
text = "Character Skill 2"
flat = true

[node name="Skill2Des" type="Label" parent="HBoxContainer/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 547.0
margin_top = 22.0
margin_right = 1091.0
margin_bottom = 70.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "Skill uses left: 5/5"
align = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/MarginContainer/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 192.0
margin_right = 1091.0
margin_bottom = 284.0
size_flags_vertical = 3

[node name="Skill3" type="Button" parent="HBoxContainer/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_right = 543.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 978, 82 )
mouse_filter = 1
size_flags_horizontal = 3
custom_colors/font_color_hover = Color( 0.662745, 0.027451, 0.666667, 1 )
custom_fonts/font = SubResource( 9 )
text = "Character Skill 3"
flat = true

[node name="Skill3Des" type="Label" parent="HBoxContainer/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 547.0
margin_top = 22.0
margin_right = 1091.0
margin_bottom = 70.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 11 )
text = "Skill uses left: 5/5"
align = 1

[node name="DescWindow" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="mouse_entered" from="HBoxContainer/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer1/Skill1" to="." method="_on_Skill1_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer1/Skill1" to="." method="_on_Skill_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer1/Skill1" to="." method="_on_Skill1_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer2/Skill2" to="." method="_on_Skill2_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer2/Skill2" to="." method="_on_Skill_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer2/Skill2" to="." method="_on_Skill2_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer3/Skill3" to="." method="_on_Skill3_mouse_entered"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer3/Skill3" to="." method="_on_Skill3_pressed"]
